Fix for BUG#4326 "Replicated LOAD DATA INFILE show nothing in processlist on slave": we now report in SHOW PROCESSLIST that we are writing to the temp files or loading the table. When we are writing to the tmp file: | 3  | system user |                 |    | Connect | 6    | Making temp file /tmp/SQL_LOAD-2-1-2.data | and when we are actually loading the .data temp file into the table: | 3  | system user |                 | test | Connect | 2    | | LOAD DATA INFILE '/tmp/SQL_LOAD-2-1-2.data' INTO TABLE `t` <...> |